Fixed tinyLeagueLanding header wrapping and mobile display.

--- a/src/routes/TinyLeague/TinyLeagueLanding.css
+++ b/src/routes/TinyLeague/TinyLeagueLanding.css
@@ -29,14 +29,16 @@
     /* Allows wrapping if necessary */
 }
 
-.TinyLeagueLanding span {
+.TinyLeagueLanding h1 {
     display: inline-flex;
     align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .TinyLeagueLanding h1 img {
-    height: 4rem;
-    transform: translateX(-0.75rem);
+    height: 6rem;
+    filter: brightness(0) saturate(100%) invert(44%) sepia(92%) saturate(3685%) hue-rotate(1deg) brightness(103%) contrast(104%);
 }
 
 
@@ -50,7 +52,7 @@
         flex-direction: column;
     }
 
-    .TinyLeagueLanding img {
+    .TinyLeagueLanding .container img {
         margin-top: 1rem;
     }
 }
